<resources>
    <string name="app_name">Aryze</string>
    <string name="tv_login_header">Sign In</string>
    <string name="et_UserName">User Name</string>
    <string name="tv_forUser">Forgot?</string>
    <string name="Pass">Password</string>
    <string name="forPass">Forgot?</string>
    <string name="LogIn">Sign In</string>
    <string name="SignUp">Sign Up?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_SignUp">Sign Up</string>
    <string name="tv_fName">First Name</string>
    <string name="et_Password">Enter Password</string>
    <string name="et_re_enter_password">Re-Enter Password</string>
    <string name="et_user_name_SU">User Name</string>
    <string name="et_New_Email">Email</string>
    <string name="et_New_Enter_Pass">Enter Password</string>
    <string name="et_Re_Enter_Pass">Re_Enter Password</string>
    <string name="btn_Sign_Up">Sign Up</string>
    <string name="show_password">Show password</string>
    <string name="show_re_password">Show password</string>
    <string name="my_profile">My Profile</string>
    <string name="bible">Bible</string>
    <string name="churches">Churches</string>
    <string name="my_stuff">My Stuff</string>
    <string name="alarms">Alarms</string>
    <string name="events">Events</string>
    <string name="prayers">Prayers</string>
    <string name="tithes">Tithes</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts">Contacts</string>
    <string name="your_name">Your Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>