<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/maleuser"
        android:title="@string/my_profile"/>
    <item
        android:id="@+id/menuBible"
        android:icon="@drawable/bible"
        android:title="@string/bible"/>
    <item
        android:id="@+id/menuChurches"
        android:icon="@drawable/church"
        android:title="@string/churches"/>

    <item android:title="@string/my_stuff">

        <menu>
            <item
                android:id="@+id/menuAlarms"
                android:icon="@drawable/alarm"
                android:title="@string/alarms"/>
            <item
                android:id="@+id/menuEvents"
                android:icon="@drawable/calander"
                android:title="@string/events"/>


            <item
                android:id="@+id/menuContacts"
                android:icon="@drawable/contacts"
                android:title="@string/contacts"/>
            <item
                android:id="@+id/menuPrayers"
                android:icon="@drawable/pray"
                android:title="@string/prayers"/>
            <item
                android:id="@+id/menuTithes"
                android:icon="@drawable/bank"
                android:title="@string/tithes"/>

        </menu>

    </item>

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/about"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/menuLogOut"
                android:icon="@drawable/logout"
                android:title="@string/sign_out"/>

        </menu>

    </item>

</menu>