<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/tvSignUpHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_SignUp"
        android:textSize="40sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_New_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignUpHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_user_name_SU"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_New_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_New_UserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_New_Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_New_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_New_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_New_Enter_Pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_New_RePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_New_Pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_Re_Enter_Pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_Sign_Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_New_RePass"
        android:layout_alignEnd="@+id/et_New_RePass"
        android:layout_marginTop="20dp"
        android:text="@string/btn_Sign_Up"
        tools:ignore="DuplicateSpeakableTextCheck" />


</RelativeLayout>